--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,9 +46,8 @@ header {
 .box {
     background-image: url(../images/floor-tile.png);
     width: 100%;
-    min-height: 100%;
-    margin-bottom: -50px;
-    height: 100%;
+   
+    
     
 }
 
@@ -111,10 +110,10 @@ hr {
     .footer{
         border-top: 8px solid #4aaaa5;
         text-align: center;
-        background-color: #666666;
-        position: absolute; 
+        background-color: #666666; 
     left: 0 ; right: 0; bottom: 0; 
     height:[footer-height];
+    flex-shrink: none;
     }
 
     #text-box{
@@ -143,6 +142,8 @@ height: 200px;
             position: relative;
             width:200px;
             float: left;
+            height: 100%;
+            min-height: 100%;
           }
           
           
